[metadata]
name = wsl_usb_con
version = attr: wsl_usb_con.VERSION
author = Huw Percival
author_email = huwpercival@xmos.com
description = {description}
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
keywords = wsl
classifiers =
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.7
packages = wsl_usb_con
test_suite = tests
setup_requires =
    setuptools
    # setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
    # setuptools >=46.4.0     # let's you use attr: to extract version from a module
install_requires =
    pytermgui
#tests_require =

[options.entry_points]
console_scripts =
    wsl_usb_con = wsl_usb_con:main
    wsl-usb-con = wsl_usb_con:main